fix: remove horizontal scroll for table

--- a/public/index.css
+++ b/public/index.css
@@ -23,7 +23,7 @@ main {
   font-size: 10px;
   padding: 0 10px 0;
   width: 15%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .dashboardBox .dashboardBox {
   flex-direction: column;
